WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272068
[Remote Inspection] Frequent targeted element requests can break automatic visibility adjustment
https://bugs.webkit.org/show_bug.cgi?id=272068
Summary
[Remote Inspection] Frequent targeted element requests can break automatic vi...
Wenson Hsieh
Reported
2024-04-02 20:31:49 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-04-03 07:23:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26787
EWS
Comment 2
2024-04-03 16:10:37 PDT
Committed
277038@main
(58a545029fd1): <
https://commits.webkit.org/277038@main
> Reviewed commits have been landed. Closing PR #26787 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-04-03 16:11:16 PDT
Comment hidden (obsolete)
<
rdar://problem/125876357
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug